--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="styles.css">
+<script defer src="script.js"></script>
+<title>COCO Meme Token</title>
+</head>
+<body>
+<header>
+  <!-- Navigation bar with links to different sections -->
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#story">Story</a></li>
+      <li><a href="#community">Community</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero section with a large banner or image -->
+  <section id="home">
+    <h1>Welcome to COCO</h1>
+    <p>The ultimate meme token on ETH</p>
+  </section>
+</header>
+
+<!-- Main content area -->
+<main>
+  <!-- Short story section -->
+  <section id="story">
+    <h2>Our Story</h2>
+    <p>Content to be added later</p>
+  </section>
+
+  <!-- Community section -->
+  <section id="community">
+    <h2>Community</h2>
+    <p>Community-driven content and testimonials</p>
+  </section>
+
+  <!-- Social links section -->
+  <section id="social-links">
+    <h2>Follow Us</h2>
+    <ul>
+      <li><a href="https://twitter.com/thecocoethtoken" target="_blank"><img src="x.jpeg" alt="x"></a></li>
+      <li><a href="https://www.dextools.io/app/en/ether/pair-explorer/0xeae4c727ea43990ea92f427da36ddff8e72f6854" target="_blank"><img src="dextools.jpeg" alt="Dextools"></a></li>
+      <li><a href="https://t.co/XZBGJ8ijrH" target="_blank"><img src="tg.png" alt="Telegram"></a></li>
+    </ul>
+  </section>
+
+
+<!-- Footer section -->
+<footer>
+  <p>© 2023 COCO Meme Token</p>
+</footer>
+</body>
+</html>
