Update index.html to reflect dextools contact

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     </ul>
   </section>
 
+    <section id="supporters">
+    <h2>Follow Us</h2>
+    <ul>
+      <li>thanks to kenyruyter@gmail.com for managing the dextools update!
+    </ul>
+  </section>
 
 <!-- Footer section -->
 <footer>
