--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!-- Social links section -->
   <section id="social-links">
-    <h2>Follow Us</h2>
+    <h2>Community Supporters</h2>
     <ul>
       <li><a href="https://twitter.com/thecocoethtoken" target="_blank"><img src="x.jpeg" alt="x"></a></li>
       <li><a href="https://www.dextools.io/app/en/ether/pair-explorer/0xeae4c727ea43990ea92f427da36ddff8e72f6854" target="_blank"><img src="dextools.jpeg" alt="Dextools"></a></li>
