--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       <li><a href="https://twitter.com/thecocoethtoken" target="_blank"><img src="x.jpeg" alt="x"></a></li>
       <li><a href="https://www.dextools.io/app/en/ether/pair-explorer/0xeae4c727ea43990ea92f427da36ddff8e72f6854" target="_blank"><img src="dextools.jpeg" alt="Dextools"></a></li>
       <li><a href="https://t.co/XZBGJ8ijrH" target="_blank"><img src="tg.png" alt="Telegram"></a></li>
+      <li><a href="https://medium.com/@cococommunity42069/">Medium</a></li>
+      <li><a href="https://github.com/coco-frens">Github</a></li>
     </ul>
   </section>
 
