--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- Community section -->
   <section id="community">
     <h2>Community</h2>
-    <p>Community-driven content and testimonials</p>
+    <p>COCO is a meme coin like no other, embodying the iconic Pepe meme style and offering a unique, organic meme experience. Its limitless creative potential, from the lovable crocodile theme to playful variants like "In love with the coco," ensures a constant stream of engaging content, strong community support.</p>
   </section>
 
   <!-- Social links section -->
@@ -46,7 +46,7 @@
     <h2>Follow Us</h2>
     <ul>
       <li><a href="https://twitter.com/thecocoethtoken" target="_blank"><img src="x.jpeg" alt="x"></a></li>
-      <li><a href="https://www.dextools.io/app/en/ether/pair-explorer/0xeae4c727ea43990ea92f427da36ddff8e72f6854" target="_blank"><img src="dextools.jpeg" alt="Dextools"></a></li>
+      <li><a href="https://www.dextools.io/app/en/ether/pair-explorer/0xeae4c727ea43990ea92f427da36ddff8e72f6854" target="_blank"><img src="img/dextools.png" alt="Dextools"></a></li>
       <li><a href="https://t.co/XZBGJ8ijrH" target="_blank"><img src="tg.png" alt="Telegram"></a></li>
       <li><a href="https://medium.com/@cococommunity42069/">Medium</a></li>
       <li><a href="https://github.com/coco-frens">Github</a></li>
