--- a/aicoco/index.html
+++ b/aicoco/index.html
@@ -1,10 +1,13 @@
-<HTML> 
-  <title>Ai Coco Minting site</title>
-  
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
   <body>
-
-    Hi there soon coming to OpenSea!
-    
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
-
 </html>
