--- a/index.html
+++ b/index.html
@@ -1,69 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styles.css">
-<script defer src="script.js"></script>
-<title>COCO Meme Token</title>
-</head>
-<body>
-<header>
-  <!-- Navigation bar with links to different sections -->
-  <nav>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#story">Story</a></li>
-      <li><a href="#community">Community</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-
-  <!-- Hero section with a large banner or image -->
-  <section id="home">
-    <h1>Welcome to COCO</h1>
-    <p>The ultimate meme token on ETH</p>
-    <p>0xE6DBeAdD1823B0BCfEB27792500b71e510AF55B3</p>
-  </section>
-</header>
-
-<!-- Main content area -->
-<main>
-  <!-- Short story section -->
-  <section id="story">
-    <h2>Our Story</h2>
-    <p>Content to be added later</p>
-  </section>
-
-  <!-- Community section -->
-  <section id="community">
-    <h2>Community</h2>
-    <p>COCO is a meme coin like no other, embodying the iconic Pepe meme style and offering a unique, organic meme experience. Its limitless creative potential, from the lovable crocodile theme to playful variants like "In love with the coco," ensures a constant stream of engaging content, strong community support.</p>
-  </section>
-
-  <!-- Social links section -->
-  <section id="social-links">
-    <h2>Follow Us</h2>
-    <ul>
-      <li><a href="https://twitter.com/thecocoethtoken" target="_blank"><img src="x.jpeg" alt="x"></a></li>
-      <li><a href="https://www.dextools.io/app/en/ether/pair-explorer/0xeae4c727ea43990ea92f427da36ddff8e72f6854" target="_blank"><img src="img/dextools.png" alt="Dextools"></a></li>
-      <li><a href="https://t.co/XZBGJ8ijrH" target="_blank"><img src="tg.png" alt="Telegram"></a></li>
-      <li><a href="https://discord.gg/bMae8xkDvt" target="_blank"><img src="img/discord.png" alt="Discord"></a></li>
-      <li><a href="https://medium.com/@cococommunity42069/" target="_blank"><img src="img/medium.png" alt="Medium"></a></li>
-      <li><a href="https://github.com/coco-frens" target="_blank"><img src="img/github.png" alt="Github"></a></li>
-    </ul>
-  </section>
-
-    <section id="supporters">
-    <h2>Community Supporters</h2>
-    <ul>
-      <li>thanks to kenyruyter@gmail.com for managing the dextools update!
-    </ul>
-  </section>
-
-<!-- Footer section -->
-<footer>
-  <p>© 2023 COCO Meme Token</p>
-</footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coco Meme token</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
